--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   intl: ^0.17.0
   http: ^0.13.4
   flutter_svg: ^0.23.0+1
+  firebase_core: ^1.10.6
+  image_picker: ^0.8.4+4
+  firebase_storage: ^10.2.4
 
 
   # The following adds the Cupertino Icons font to your application.
